Adding Survey Controller and View, Small adjustment at home page

--- a/Project02CarRentalWebApp/Views/Home/About.cshtml
+++ b/Project02CarRentalWebApp/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewBag.Title = "About";
+    for (int i = 0; i < 10; i++)
+    {
+        <h1>@i</h1>
+    }
 }
-<h2>@ViewBag.Title.</h2>
+<h2 id="title">@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
+<h3>@ViewBag.o.Roman</h3>
 <p>Use this area to provide additional information.</p>
